# iut-techathon-hackathon-preli

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
app/: alerts.py  db.py  main.py  models.py  routes.py  services.py  simulator.py  store.py  ws.py
app/bot/: __init__.py  llm.py
dashboard/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  main.tsx  types.ts
dashboard/src/api/: ws.ts
dashboard/src/components/: AlertsPanel.tsx  DemoControl.tsx  DeviceCard.tsx  DeviceGrid.tsx  FloorPlan.tsx  LogsPanel.tsx  PowerChart.tsx  PowerMeter.tsx  ThemeToggle.tsx
dashboard/src/context/: ThemeContext.tsx
dashboard/src/styles/: global.css
hardware/: README.md  diagram.json  sketch.ino
