[project]
name = "techathon-hackathon-preli"
version = "0.1.0"
description = "Office energy monitoring system with live web dashboard and Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "discord.py>=2.4.0",
    "groq>=0.12.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2026.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
